subi ajustes sin metodos en controller